# holograd

./: .gitignore  EXPERIMENT_PLAN.md  PAPER_ANALYSIS.md  PROGRESS_CHECKPOINT.md  README.md  holograd_tex.tex  holograd_v2_latex.md  pyproject.toml  refs.bib  requirements-dev.txt  requirements.txt
benchmarks/: ablation_k.py  ablation_rank.py  analyze_gradient_variation.py  bandwidth.py  byzantine.py  compare_methods.py  compare_variants.py  compare_variants_quadratic.py  debug_holograd.py  diagnose_adc.py  diagnose_training.py  measure_effective_rank.py  momentum_holograd.py  plot_comparison.py  prove_convergence.py  run_all_experiments.py  test_momentum_directions.py  test_momentum_history.py  test_pretrained_gradient.py  test_training_gradient.py  train_wikitext.py  tune_hyperparams.py  verify_convergence.py
configs/: default.yaml
examples/: train_gpt2.py
results/: e1_claim_c2_summary.json  e1_gpt2_124m.json  e1_gradient_variability.json  e3_claim_c3_summary.json  e3_momentum_efficiency.json  e7_byzantine_tolerance.json  e7_claim_c7_summary.json
scripts/: generate_figures.py  run_experiments.sh  vastai_benchmark.sh
scripts/distributed/: coordinator_server.py  deploy.py  experiment_server.py  network.py  quick_start.py  run_coordinator.py  run_wikitext.py  run_worker.py  ssh_distributed.py  ssh_distributed_v2.py  vastai_deploy.sh  worker_server.py  worker_task.py
src/holograd/: __init__.py
src/holograd/core/: __init__.py  config.py  types.py
src/holograd/distributed/: __init__.py  coordinator.py  simulation.py  worker.py
src/holograd/experiments/: __init__.py  evidence.py  runner.py
src/holograd/gradient/: __init__.py  backprop.py  jvp.py
src/holograd/protocol/: __init__.py  aggregation.py  commitment.py  direction.py
src/holograd/training/: __init__.py  data.py  model.py  trainer.py
src/holograd/utils/: __init__.py  logging.py  seeding.py
src/holograd/verification/: __init__.py  verifier.py
tests/integration/: test_end_to_end.py
tests/unit/: test_aggregation.py  test_commitment.py  test_config.py  test_coordinator.py  test_direction.py  test_gradient.py  test_logging.py  test_momentum_centric.py  test_seeding.py  test_training.py  test_types.py  test_verifier.py  test_worker.py
